--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			<ul>
 				<li><a href="#" target="_blank" style="text-decoration:none; color:white;">HOME</a></li>
 				<li><a href="#learn-text"style="text-decoration:none; color:white;">ABOUT</a></li>
-				<li><a href="file:///C:/Users/shree/Desktop/css%20course%20project/html/kapi-kalam-register.html" target="_blank" style="text-decoration:none; color:white;">DONATE</a></li>
-				<li><a href="file:///C:/Users/shree/Desktop/css%20course%20project/html/kapi-kalam-profile.html#" target="_blank" style="text-decoration:none; color:white;">PROFILE</a></li>
+				<li><a href="kapi-kalam-register.html" target="_blank" style="text-decoration:none; color:white;">DONATE</a></li>
+				<li><a href="kapi-kalam-profile.html" target="_blank" style="text-decoration:none; color:white;">PROFILE</a></li>
 				
 			</ul>
 		</div>
