--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<div class="item-home">कापी कलम</div>
 		<div class="item-home">HOME</div> 
 		<a href="#learn-text"style="text-decoration:none; color:white;"><div class="item-about">ABOUT</div></a>
-		<a href="file:///C:/Users/shree/Desktop/css%20course%20project/html/kapi-kalam-register.html" target="_blank" style="text-decoration:none; color:white;"><div class="item-donate">DONATE</div></a>
-		<a href="file:///C:/Users/shree/Desktop/css%20course%20project/html/kapi-kalam-profile.html#" target="_blank" style="text-decoration:none; color:white;"><div class="item-profile">PROFILE</div></a>
+		<a href="kapi-kalam-register.html" target="_blank" style="text-decoration:none; color:white;"><div class="item-donate">DONATE</div></a>
+		<a href="kapi-kalam-profile.html" target="_blank" style="text-decoration:none; color:white;"><div class="item-profile">PROFILE</div></a>
 
 	</div>
 
